updated color scheme

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 
     <!-- Cards Section -->
 
+    <section class="work" id="work">
+        <div class="section-header">
+            <h1>My Work</h1>
+        </div>
         <div class="container-fluid">
             <div class="row">
 
@@ -125,6 +129,8 @@
 
             </div>
         </div>
+    </section>
+        
 
     
 
