added skills section

--- a/index.html
+++ b/index.html
@@ -130,6 +130,53 @@
             </div>
         </div>
     </section>
+
+    <section class="skills" id="skills">
+        <div class="section-header">
+            <h1>My Skills</h1>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+
+                <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                    <div class="card">
+                      <img src="./images/hero1.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                    <div class="card">
+                      <img src="./images/hero1.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                    <div class="card">
+                      <img src="./images/hero1.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                  </div>
+
+
+            </div>
+        </div>
+
+    </section>
         
 
     
