added images to skills section

--- a/index.html
+++ b/index.html
@@ -131,41 +131,55 @@
         </div>
     </section>
 
+    <!-- Skills section -->
+
     <section class="skills" id="skills">
         <div class="section-header">
             <h1>My Skills</h1>
+            <p>These are the subjects I am currently learning</p>
         </div>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row justify-content-center">
 
-                <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                    <div class="card">
-                      <img src="./images/hero1.jpg" class="card-img-top" alt="...">
+                <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+                    <div class="card card1">
+                      <img src="./images/css.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">CSS</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                           content.</p>
                       </div>
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                    <div class="card">
-                      <img src="./images/hero1.jpg" class="card-img-top" alt="...">
+                  <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+                    <div class="card card2">
+                      <img src="./images/github.png" class="card-img-top-git" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Version Control</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                           content.</p>
                       </div>
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                    <div class="card">
-                      <img src="./images/hero1.jpg" class="card-img-top" alt="...">
+                  <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+                    <div class="card card3">
+                      <img src="./images/js.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">JavaScript</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                          content.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+                    <div class="card card3">
+                      <img src="./images/html.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">HTML</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                           content.</p>
                       </div>
