added gradient to jumbotron

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
                   <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                     <div class="card">
-                      <img src="./images/hero1.jpg" class="card-img-top" alt="...">
+                      <img src="./images/02-portfolio-3.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title">Transport App</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                           content.</p>
                         <a href="#" class="btn btn-primary">Visit Page</a>
@@ -134,10 +134,11 @@
     <!-- Skills section -->
 
     <section class="skills" id="skills">
-        <div class="section-header">
-            <h1>My Skills</h1>
+      <div class="container1">
+        <h1>My Skills</h1>
             <p>These are the subjects I am currently learning</p>
-        </div>
+      </div>
+            
 
         <div class="container-fluid">
             <div class="row justify-content-center">
