updated buttons and navbar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Navigation Bar -->
             <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <h1>MJN</h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
             </nav>
 
     <!-- This is my about section -->
-    <section class="section-about-hero" id="about">
+    <section class="section-about-hero">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <img src="/images/profile-pic.jpg" alt="">
@@ -98,7 +98,7 @@
                         <h5 class="card-title">LED Music App</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                           content.</p>
-                        <a href="#" class="btn btn-primary">Visit Page</a>
+                        <a href="#" class="btn">Visit Page</a>
                       </div>
                     </div>
                   </div>
@@ -110,7 +110,7 @@
                         <h5 class="card-title">Travel Page</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                           content.</p>
-                        <a href="#" class="btn btn-primary">Visit Page</a>
+                        <a href="#" class="btn">Visit Page</a>
                       </div>
                     </div>
                   </div>
@@ -122,7 +122,7 @@
                         <h5 class="card-title">Transport App</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                           content.</p>
-                        <a href="#" class="btn btn-primary">Visit Page</a>
+                        <a href="#" class="btn">Visit Page</a>
                       </div>
                     </div>
                   </div>
@@ -143,46 +143,53 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
 
-                <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+                <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
                     <div class="card card1">
                       <img src="./images/css.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">CSS</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                        <p class="card-text">Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML.</p>
                       </div>
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+                  <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
                     <div class="card card2">
                       <img src="./images/github.png" class="card-img-top-git" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Version Control</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                        <p class="card-text">GitHub, Inc. is an Internet hosting service for software development and version control using Git.</p>
                       </div>
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+                  <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
                     <div class="card card3">
                       <img src="./images/js.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">JavaScript</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                        <p class="card-text">JavaScript often abbreviated as JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.</p>
                       </div>
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-2 col-md-2 col-sm-12">
+                  <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
                     <div class="card card3">
                       <img src="./images/html.png" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">HTML</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                        <p class="card-text">HTML5 is a markup language used for structuring and presenting content on the World Wide Web.</p>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+                    <div class="card card4" id="about">
+                      <img src="./images/profile-pic.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">About Me</h5>
+                        <h6>Marc Norris</h6>
+                        <p class="card-text">I live in Bristol, England and I am learning front end web development.</p>
                       </div>
                     </div>
                   </div>
@@ -192,6 +199,10 @@
         </div>
 
     </section>
+
+    <footer>
+      <p>Created by Marc Norris &copy 2022</p>
+    </footer>
         
 
     
