updated contact me card

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
 
-                <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+                <div class="cardContainer col-lg-2 col-md-6 col-sm-12">
                     <div class="card card1">
                       <img src="./images/css.png" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -153,7 +153,7 @@
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+                  <div class="cardContainer col-lg-2 col-md-6 col-sm-12">
                     <div class="card card2">
                       <img src="./images/github.png" class="card-img-top-git" alt="...">
                       <div class="card-body">
@@ -163,7 +163,7 @@
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+                  <div class="cardContainer col-lg-2 col-md-6 col-sm-12">
                     <div class="card card3">
                       <img src="./images/js.png" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -173,7 +173,7 @@
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+                  <div class="cardContainer col-lg-2 col-md-6 col-sm-12">
                     <div class="card card3">
                       <img src="./images/html.png" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -183,13 +183,24 @@
                     </div>
                   </div>
 
-                  <div class="cardContainer col-lg-4 col-md-6 col-sm-12">
+                  <div class="cardContainer col-lg-2 col-md-6 col-sm-12">
                     <div class="card card4" id="about">
                       <img src="./images/profile-pic.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">About Me</h5>
-                        <h6>Marc Norris</h6>
+                        <div class="cardInfo">
+                          <h6>Marc Norris</h6>
+                        </div>
                         <p class="card-text">I live in Bristol, England and I am learning front end web development.</p>
+                        <div class="cardContact" id="contact">
+                          <h6>Contact Me:</h6>
+                          <div class="links">
+                            <a href="https://github.com/shaky411" target="_blank"><img src="./images/github2.jpg" alt=""></a>
+                            <a href="https://www.linkedin.com/in/marcnorris1984/" target="_blank"><img src="./images/linkedin2.png" alt=""></a>
+                            <a href="https://twitter.com/swiftgekko" target="_blank"><img src="./images/twitter.png" alt=""></a>
+                          </div>
+                          
+                        </div>
                       </div>
                     </div>
                   </div>
