added readme and footer

--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
                       <img src="./images/bristol.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Travel Page</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                        <p class="card-text">Travel site all about my home town, Bristol. This site documents the best places to see, eat and drink.</p>
                         <a href="#" class="btn">Visit Page</a>
                       </div>
                     </div>
@@ -120,8 +119,7 @@
                       <img src="./images/02-portfolio-3.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Transport App</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                        <p class="card-text">Delivering an Uber like experience with some extra swag! Visit my page now to book your next ride and travel in style.</p>
                         <a href="#" class="btn">Visit Page</a>
                       </div>
                     </div>
