added footer links

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <img src="/images/profile-pic.jpg" alt="">
-                <h1 class="display-4">Marc Norris</h1>
-                <h3>Bristol, England</h3>
+                <h1 class="display-4">Hi, I'm Marc.</h1>
+                <!-- <h3>Bristol, England</h3> -->
                 <p class="lead">I am currently learning to become a front end web developer.</p>
 
                 <!-- My font awesonme icons -->
                 <div class="icons">
                     <i class="fa-brands fa-square-js"></i>
-                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-html5 icon1"></i>
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-brands fa-css3-alt"></i>
                 <i class="fa-brands fa-trello"></i>
@@ -211,6 +211,12 @@
 
     <footer>
       <p>Created by Marc Norris &copy 2022</p>
+      <ul>
+        <a href="index.html">Home</a>
+        <a href="#about">About</a>
+        <a href="#work">Work</a>
+        <a href="#contact">Contact</a>
+      </ul>
     </footer>
         
 
