minor UI adjustments

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <img src="/images/profile-pic.jpg" alt="">
                 <h1 class="display-4">Hi, I'm Marc.</h1>
                 <!-- <h3>Bristol, England</h3> -->
-                <p class="lead">I am currently learning to become a front end web developer.</p>
+                <p class="lead">Checkout my portfolio and see my recent projects.</p>
 
                 <!-- My font awesonme icons -->
                 <div class="icons">
@@ -96,8 +96,7 @@
                       <img src="./images/hero1.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">LED Music App</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                        <p class="card-text">Music streaming app with some really cool visuals. Click on the link below to see it in action.</p>
                         <a href="#" class="btn">Visit Page</a>
                       </div>
                     </div>
@@ -210,13 +209,14 @@
     </section>
 
     <footer>
-      <p>Created by Marc Norris &copy 2022</p>
+      
       <ul>
         <a href="index.html">Home</a>
         <a href="#about">About</a>
         <a href="#work">Work</a>
         <a href="#contact">Contact</a>
       </ul>
+      <p>Created by Marc Norris Web Design &copy 2022</p>
     </footer>
         
 
