updated navbar dropdown

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <!-- Navigation Bar -->
-            <nav class="navbar navbar-expand-lg navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark customNav">
                 <h1>MJN</h1>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,13 +68,15 @@
                 <!-- My font awesonme icons -->
                 <div class="icons">
                     <i class="fa-brands fa-square-js"></i>
-                <i class="fa-brands fa-html5 icon1"></i>
+                <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-github"></i>
                 <i class="fa-brands fa-css3-alt"></i>
                 <i class="fa-brands fa-trello"></i>
                 <i class="fa-brands fa-slack"></i>
                 <i class="fa-solid fa-font-awesome"></i>
                 <i class="fa-brands fa-swift"></i>
+                <i class="fa-brands fa-apple"></i>
+                <i class="fa-brands fa-figma"></i>
                 </div>
                 
             </div>
