updated profile pic

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="section-about-hero">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <img src="./images/profile-pic.jpg" alt="">
+                <img src="./images/profile-pic.jpg" alt="Profile Picture">
                 <h1 class="display-4">Hi, I'm Marc.</h1>
                 <!-- <h3>Bristol, England</h3> -->
                 <p class="lead">Checkout my portfolio and see my recent projects.</p>
