--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
     <section class="section-about-hero">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
+              <div class="profile-image">
                 <img src="./images/profile-pic.jpg" alt="Profile Picture">
+              </div>
+                
                 <h1 class="display-4">Hi, I'm Marc.</h1>
                 <!-- <h3>Bristol, England</h3> -->
                 <p class="lead">Checkout my portfolio and see my recent projects.</p>
